--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -3,9 +3,9 @@ name: Build and publish nugets to server
 on:
   workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
