--- a/clients/MV.TwoD/MV.TwoD.csproj
+++ b/clients/MV.TwoD/MV.TwoD.csproj
@@ -9,7 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Pla.Lib.UI" Version="1.0.2" />
     <PackageReference Include="Pla.Win" Version="1.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\mv-home\Home\Home.csproj" />
   </ItemGroup>
 
 </Project>
