added command line

--- a/clients/MV.OneD/MV.OneD.csproj
+++ b/clients/MV.OneD/MV.OneD.csproj
@@ -1,5 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\mv-home\Home\Home.csproj" />
+    <ProjectReference Include="..\..\libs\MV\MV.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    <PackageReference Include="Terminal.GUI" Version="1.6.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
