--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-            "name": ".NET Core Launch (console)",
+            "name": "Two dimensions (Win)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
@@ -15,6 +15,21 @@
             "cwd": "${workspaceFolder}/clients/MV.TwoD",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
+            "stopAtEntry": false
+        },{
+            // Use IntelliSense to find out which attributes exist for C# debugging
+            // Use hover for the description of the existing attributes
+            // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
+            "name": "One dimiension",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build-oned",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/clients/MV.OneD/bin/Debug/net6.0/MV.OneD.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/clients/MV.OneD",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "externalTerminal",
             "stopAtEntry": false
         },
         {
