--- a/libs/MV.OneD/MV.OneD.csproj
+++ b/libs/MV.OneD/MV.OneD.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\MV\MV.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Terminal.Gui" Version="1.6.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
