--- a/clients/MV.OneD.Client/MV.OneD.Client.csproj
+++ b/clients/MV.OneD.Client/MV.OneD.Client.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\mv-home\Home\Home.csproj" />
     <ProjectReference Include="..\..\libs\MV\MV.csproj" />
+    <ProjectReference Include="..\..\libs\MV.OneD\MV.OneD.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,6 +16,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    
   </PropertyGroup>
 
 </Project>
