--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/clients/MV.TwoD/bin/Debug/net6.0-windows/MV.TwoD.dll",
+            "program": "${workspaceFolder}/clients/MV.TwoD.Client/bin/Debug/net6.0-windows/MV.TwoD.Client.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/clients/MV.TwoD",
+            "cwd": "${workspaceFolder}/clients/MV.TwoD.Client",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
