--- a/clients/MV.TwoD.Client/MV.TwoD.Client.csproj
+++ b/clients/MV.TwoD.Client/MV.TwoD.Client.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\mv-home\Home\Home.csproj" />
+    <ProjectReference Include="..\..\libs\MV\MV.csproj" />
+    <ProjectReference Include="..\..\libs\MV.TwoD\MV.TwoD.csproj" />
   </ItemGroup>
 
 </Project>
