--- a/libs/MV.TwoD/MV.TwoD.csproj
+++ b/libs/MV.TwoD/MV.TwoD.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\MV\MV.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Pla.Lib.UI" Version="1.0.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
