--- a/libs/MV/MV.csproj
+++ b/libs/MV/MV.csproj
@@ -1,10 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    
+    <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>MV</PackageId>
     <Version>0.9.0</Version>
     <Authors>Paweł Gałęzowski</Authors>
