--- a/libs/MV.TwoD/MV.TwoD.csproj
+++ b/libs/MV.TwoD/MV.TwoD.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\MV.Skia\MV.Skia.csproj" />
     <ProjectReference Include="..\MV\MV.csproj" />
   </ItemGroup>
 
