--- a/clients/MV.TwoD.Client/MV.TwoD.Client.csproj
+++ b/clients/MV.TwoD.Client/MV.TwoD.Client.csproj
@@ -8,6 +8,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;NU1701</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;NU1701</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Pla.Lib.UI" Version="1.0.8" />
     <PackageReference Include="Pla.Win" Version="1.0.4" />
