--- a/libs/MV.TwoD/MV.TwoD.csproj
+++ b/libs/MV.TwoD/MV.TwoD.csproj
@@ -9,7 +9,12 @@
     <PackageReference Include="Pla.Lib.UI" Version="1.0.8" />
     <PackageReference Include="Pla.Win" Version="1.0.4" />
   </ItemGroup>
-
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<NoWarn>1701;1702;NU1701</NoWarn>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<NoWarn>1701;1702;NU1701</NoWarn>
+	</PropertyGroup>
   <PropertyGroup>
     <TargetFramework>net6.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
