--- a/libs/MV/MV.csproj
+++ b/libs/MV/MV.csproj
@@ -7,6 +7,12 @@
 		<Company>lopla</Company>
 		<Description>Base packge for creating metaverses.</Description>
 	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <NoWarn>1701;1702;NU1701</NoWarn>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <NoWarn>1701;1702;NU1701</NoWarn>
+	</PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
 	</ItemGroup>
