--- a/libs/MV.TwoD/MV.TwoD.csproj
+++ b/libs/MV.TwoD/MV.TwoD.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <ProjectReference Include="..\MV.Skia\MV.Skia.csproj" />
@@ -6,8 +6,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Pla.Lib.UI" Version="1.0.8" />
-    <PackageReference Include="Pla.Win" Version="1.0.4" />
+    <PackageReference Include="Pla.Lib.UI" Version="1.0.11" />
+    <PackageReference Include="Pla.Win" Version="1.0.5" />
   </ItemGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<NoWarn>1701;1702;NU1701</NoWarn>
