--- a/libs/MV.OneD/MV.OneD.csproj
+++ b/libs/MV.OneD/MV.OneD.csproj
@@ -12,6 +12,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <PackageId>MV.OneD</PackageId>
+		<Version>0.9.6</Version>
+		<Authors>Paweł Gałęzowski</Authors>
+		<Company>lopla</Company>
+		<Description>Package for creating OneD clients for MV.</Description>
+
   </PropertyGroup>
 
 </Project>
