--- a/libs/MV.Ide/MV.Ide.csproj
+++ b/libs/MV.Ide/MV.Ide.csproj
@@ -5,7 +5,14 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>    
+ 		<PackageId>MV.Ide</PackageId>
+		<Version>0.9.6</Version>
+		<Authors>Paweł Gałęzowski</Authors>
+		<Company>lopla</Company>
+		<Description>Package to debug packages for mv (used by sdk in base project). Usually you don't need to install this.</Description>
+
   </PropertyGroup>
+
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<NoWarn>1701;1702;NU1701</NoWarn>
 	</PropertyGroup>
